# RustCoder

./: .gitignore  Cargo.toml  Makefile.toml  compete.toml
agc003/: Cargo.toml
agc003/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
agc012/: Cargo.toml
agc014/: Cargo.toml
agc014/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
agc027/: Cargo.toml
agc037/: Cargo.toml
hitachi2020/: Cargo.toml
hitachi2020/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
src/: lib.rs  main.rs  mylib.rs
src/mylib/: modinv.rs  rle.rs
typical90/: Cargo.toml
