[package]
name = "RustCoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "abc068",
    "abc074",
    "abc086",
    "abc132",
    "abc142",
    "abc157",
    "abc160",
    "abc161",
    "abc250",
    "agc014",
    "panasonic2020",
    "typical90",
    "abc138",
    "abc094",
    "abc116",
    "abc149",
    "agc027",
    "abc092",
    "hitachi2020",
    "abc153",
    "abc158",
    "abc114",
    "abc108",
    "abc063",
    "abc052",
    "abc084",
    "abc071",
    "abc127",
    "abc141",
    "abc123",
    "abc134",
    "agc002",
    "abc152",
    "abc118",
    "abc044",
    "abc124",
    "abc090",
    "agc024",
    "abc079",
    "abc139",
    "abc062",
    "abc059",
    "abc140",
    "abc061",
    "abc109",
    "abc133",
    "abc093",
    "abc113",
    "abc104",
    "abc050",
    "abc103",
    "abc049",
    "abc148",
    "abc058",
    "abc053",
    "agc003",
    "abc155",
    "abc128",
    "agc037",
    "abc042",
    "abc097",
    "agc021",
]

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
cargo-snippet = "0.6.5"